feat: Update font family in index.css and add DoodlesMain component
The index.css file was updated to include the 'Poppins' font family for the body element. Additionally, the DoodlesMain component was added to the project. This component displays a full-screen background image with a repeating pattern.

```

--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,13 @@
     display: none; /* Para Chrome, Safari, y Opera */
 }
 
+
+.radial-mask {
+  mask-image: radial-gradient(circle at center, transparent 20%, black 100%);
+  mask-size: cover;
+}
+
+.radial-mask-invert {
+    mask-image: radial-gradient(circle at center, black , transparent 90%);
+    mask-size: cover;
+  }
