--- a/src/index.css
+++ b/src/index.css
@@ -71,11 +71,13 @@
   @layer base {
     * {
       @apply border-border;
+      scroll-behavior: smooth;
 
     }
     body {
       @apply bg-background text-foreground;
       font-family: 'Poppins', sans-serif;
+      
       
     }
   }
