feat: Agregar lazy loading para imágenes en los componentes AcademicProgram y navigation
- Agregar lazy loading para imágenes en los componentes AcademicProgram y navigation.
- Añadir estilos CSS para crear un efecto de sombra en los lados de las páginas del flipbook.
- Cambiar la URL del PDF en el componente Flipbook.
- Ajustar las propiedades del componente Flipbook para mostrar una sombra más oscura y las esquinas de las páginas.

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,24 @@
   }
 
 
+.page-left::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 10%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(0,0,0,0.3), transparent);
+    z-index: 1;
+}
+
+.page-right::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 10%;
+    height: 100%;
+    background: linear-gradient(to left, rgba(0,0,0,0.3), transparent);
+    z-index: 1;
+}
