--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,9 @@
     background: linear-gradient(to left, rgba(0,0,0,0.3), transparent);
     z-index: 1;
 }
+
+.page-cover-parent{
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+}
