--- a/src/App.css
+++ b/src/App.css
@@ -37,30 +37,163 @@
   }
 
 
-.page-left::after{
-    content: "";
+  .page {
+    position: relative;
+    width: 100%;
+    height:100%;
+    overflow: hidden;
+  }
+  
+  /* Estilos para la página derecha */
+  /*
+  .page-right {
+    background: #ffffff; /* Color de fondo base para la página */
+  
+  
+  .page-right-highlight {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 10%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(0,0,0,0.3), transparent);
-    z-index: 1;
-}
-
-.page-right::after{
-    content: "";
-    position: absolute;
-    top: 0;
+    width: 55%;
+    height: 99%;
     right: 0;
-    width: 10%;
-    height: 100%;
-    background: linear-gradient(to left, rgba(0,0,0,0.3), transparent);
-    z-index: 1;
-}
+    top: 0;
+    background: linear-gradient(244.92deg, rgba(255, 255, 255, 0.3) 8.53%, rgba(255, 255, 255, 0) 67.62%);
+    opacity: 0.6;
+  }
+  
+  .page-right-top-shadow {
+    position: absolute;
+    width: 84px;
+    height: 114px;
+    left: 0;
+    top: 0;
+    background: linear-gradient(142.07deg, rgba(27, 27, 27, 0.06) 0%, rgba(27, 27, 27, 0) 45.43%);
+  }
+  
+  .page-right-shadow {
+    position: absolute;
+    width: 50%;
+    height: 99%;
+    left: 0;
+    top: 0;
+    background: linear-gradient(75.35deg, #102437 5.14%, rgba(77, 88, 99, 0) 52.19%);
+    opacity: 0.08;
+  }
+  
+  .page-right-binding {
+    position: absolute;
+    width: 15px;
+    height: 99%;
+    left: 0;
+    top: 0;
+    background: linear-gradient(90deg, #0A1128 0%, rgba(13, 25, 68, 0.25) 51.52%, rgba(13, 25, 68, 0) 100%);
+    opacity: 0.1;
+  }
+  
+  /* Estilos para la página izquierda */
+  /*.page-left {
+    background: #ffffff; /* Color de fondo base para la página */
 
-.page-cover-parent{
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
-}
+  
+  .page-left-highlight {
+    position: absolute;
+    width: 55%;
+    height: 99%;
+    right: 0;
+    top: 0;
+    background: linear-gradient(255.76deg, rgba(255, 255, 255, 0.3) 8.82%, rgba(255, 255, 255, 0) 89.88%);
+    opacity: 0.8;
+  }
+  
+  .page-left-binding {
+    position: absolute;
+    width: 15px;
+    height: 99%;
+    right: 0;
+    top: 0;
+    background: linear-gradient(90deg, #1F1F1F 0%, rgba(196, 196, 196, 0) 100%);
+    opacity: 0.15;
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+  }
+  
+  .page-left-shadow {
+    position: absolute;
+    width: 50%;
+    height: 99%;
+    left: 0;
+    top: 0;
+    background: linear-gradient(70.16deg, #122B43 4.17%, rgba(13, 38, 63, 0) 44.9%);
+    opacity: 0.08;
+  }
+  
+  /* Línea central */
+  .center-line {
+    position: absolute;
+    width: 1px;
+    height: 99%;
+    left: 0px;
+    top: 0px;
+    mix-blend-mode: color-burn;
+    opacity: 0.06;
+    border: 1px solid #393939;
+  }
+
+
+  .bottom-shadows {
+    position: absolute;
+    width: 908px;
+    height: 181px;
+    left: 18px;
+    bottom: 0;
+    opacity: 0.5;
+  }
+  
+  .bottom-left-secondary-shadow {
+    position: absolute;
+    width: 607px;
+    height: 68px;
+    left: calc(50% - 607px/2 + 159.5px);
+    bottom: 0;
+    background: radial-gradient(50% 50% at 50.07% 50%, #1F2228 0%, rgba(34, 37, 45, 0.338931) 56.21%, rgba(35, 39, 47, 0.05) 81.73%, rgba(36, 39, 48, 0) 100%);
+    opacity: 0.25;
+  }
+  
+  .bottom-right-secondary-shadow {
+    position: absolute;
+    width: 653px;
+    height: 62px;
+    left: calc(50% - 653px/2 - 118.5px);
+    bottom: 0;
+    background: radial-gradient(37.5% 37.5% at 50% 0%, #1F2228 0%, rgba(34, 37, 45, 0.338931) 56.21%, rgba(35, 39, 47, 0.05) 81.73%, rgba(36, 39, 48, 0) 100%);
+    opacity: 0.25;
+  }
+  
+  .bottom-right-main-shadow {
+    position: absolute;
+    width: 524px;
+    height: 181px;
+    left: calc(50% - 524px/2 + 103px);
+    bottom: 0;
+    background: radial-gradient(49.4% 49.4% at 50% 50.6%, #212528 0%, rgba(250, 250, 250, 0) 100%);
+    opacity: 0.4;
+  }
+  
+  .bottom-left-main-shadow {
+    position: absolute;
+    width: 516px;
+    height: 115px;
+    left: calc(50% - 516px/2 - 98px);
+    bottom: 0;
+    background: radial-gradient(49.4% 49.4% at 50% 50.6%, #212528 0%, rgba(250, 250, 250, 0) 100%);
+    opacity: 0.2;
+  }
+  
+  .bottom-wide-shadow {
+    position: absolute;
+    width: 797px;
+    height: 6px;
+    left: calc(50% - 797px/2);
+    bottom: 0;
+    background: linear-gradient(90deg, #000000 0%, rgba(0, 0, 0, 0) 49.96%, #000000 100%);
+    opacity: 0.5;
+    filter: blur(1px);
+  }
